objects/CRM_System__c.object
<CustomObject>
    <fields>
        <fullName>CRM_AUTH_TYPE__c</fullName>
        <label>CRM AUTH TYPE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_BASIC_AUTH__c</fullName>
        <label>CRM BASIC AUTH</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_FORMAT__c</fullName>
        <label>CRM FORMAT</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ADF_HTTPS_RAW</fullName>
                    <default>true</default>
                    <label>ADF_HTTPS_RAW</label>
                </value>
                <value>
                    <fullName>ADF_HTTPS_ENCODED</fullName>
                </value>
                <value>
                    <fullName>ADF_SOAP</fullName>
                </value>
                <value>
                    <fullName>STAR_SOAP</fullName>
                </value>
                <value>
                    <fullName>STAR_HTTPS</fullName>
                </value>
                <value>
                    <fullName>ADF_HTTPS</fullName>
                    <isActive>false</isActive>
                    <label>ADF_HTTPS</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_HEADER_API_KEY__c</fullName>
        <label>CRM HEADER API KEY</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_PROTOCOL__c</fullName>
        <label>CRM PROTOCOL</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SOAP</fullName>
                    <default>true</default>
                    <label>SOAP</label>
                </value>
                <value>
                    <fullName>HTTPS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description_TXT__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Division_CD__c</fullName>
        <label>Division</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Division</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Endpoint_URL__c</fullName>
        <inlineHelpText>Changing this URL will change the endpoint for the CRM System. All opportunities will be sent to the URL address here.</inlineHelpText>
        <label>Endpoint URL</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ISActive_FLG__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Receive_Lead_Updates__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Receive Lead Updates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vendor_ID__c</fullName>
        <label>Vendor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Vendor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CRM Systems</relationshipLabel>
        <relationshipName>CRM_Systems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>CRM System</label>
    <listViews>
        <fullName>Acura_CRM</fullName>
        <columns>Division_CD__c</columns>
        <columns>Vendor_ID__c</columns>
        <columns>NAME</columns>
        <columns>CRM_FORMAT__c</columns>
        <columns>ISActive_FLG__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Division_CD__c</field>
            <operation>equals</operation>
            <value>B</value>
        </filters>
        <label>Acura CRM</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>Division_CD__c</columns>
        <columns>NAME</columns>
        <columns>Vendor_ID__c</columns>
        <columns>CRM_BASIC_AUTH__c</columns>
        <columns>CRM_FORMAT__c</columns>
        <columns>CRM_PROTOCOL__c</columns>
        <columns>Endpoint_URL__c</columns>
        <columns>ISActive_FLG__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Honda_CRM</fullName>
        <columns>Division_CD__c</columns>
        <columns>Vendor_ID__c</columns>
        <columns>NAME</columns>
        <columns>CRM_FORMAT__c</columns>
        <columns>ISActive_FLG__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Division_CD__c</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>Honda CRM</label>
    </listViews>
    <listViews>
        <fullName>Powersports_CRMs</fullName>
        <columns>Division_CD__c</columns>
        <columns>Vendor_ID__c</columns>
        <columns>NAME</columns>
        <columns>ISActive_FLG__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Division_CD__c</field>
            <operation>equals</operation>
            <value>M</value>
        </filters>
        <label>Powersports CRMs</label>
    </listViews>
    <listViews>
        <fullName>Star</fullName>
        <columns>NAME</columns>
        <columns>Vendor_ID__c</columns>
        <columns>Receive_Lead_Updates__c</columns>
        <columns>ISActive_FLG__c</columns>
        <columns>Endpoint_URL__c</columns>
        <columns>Division_CD__c</columns>
        <columns>CRM_FORMAT__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CRM_FORMAT__c</field>
            <operation>equals</operation>
            <value>STAR_SOAP,STAR_HTTPS</value>
        </filters>
        <label>Star</label>
    </listViews>
    <nameField>
        <label>CRM System Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CRM Systems</pluralLabel>
    <recordTypes>
        <fullName>System</fullName>
        <active>true</active>
        <label>System</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>